# Exp_Nannou

./: .gitignore  .gitmodules  README.md
hello-world/: Cargo.toml
sketchbook/: Cargo.toml  bkup.Cargo.toml
sketchbook/__sketches/: Cargo.toml
sketchbook/_library/: Cargo.toml
sketchbook/_notes/: __notes.md
sketchbook/_templates/: tmpl-210301.rs
sketchbook/add-one/: Cargo.toml
sketchbook/add-one/src/: lib.rs
sketchbook/adder/: Cargo.toml
sketchbook/examples/: Cargo.toml  array-2d.rs  bezier-curve.rs  circles-exp.rs  circles-rand-sqrt.rs  divide-line.rs  event-handler.rs  gradient.rs  hsl-check.rs  image-basics.rs  image-floyd-steinburg-dithering.rs  image-pixels-quantize.rs  lerp-color-array.rs  matrix-dynamic.rs  offscreen-render.rs  pattern-matching.rs  vec-perpendicular.rs
sketchbook/library-dev/: Cargo.toml  dev-background.rs  lines-simple.rs
sketchbook/library-dev/grid4/: dev-grid4.rs
sketchbook/library-dev/grid5/: dev-grid5.rs
sketchbook/n-series/: Cargo.toml  n-0083.rs  n-0084.rs  n-0085.rs  n-0086.rs  n-0087.rs  n-0088.rs  n-0089.rs  n-0090.rs  n-0091.rs  n-0092.rs  n-0093.rs  n-0094.rs  n-0095.rs  n-0096.rs  n-0097.rs  n-0098.rs  n-0099.rs  n-0100.rs  n-0102.rs  n-0103.rs  n-0104.rs  n-0105.rs
sketchbook/nature-pix/: Cargo.toml  np-001.rs  np-002.rs
sketchbook/rust_patterns/observer_pattern/: Cargo.toml
sketchbook/rust_patterns/observer_pattern/src/: main.rs
sketchbook/rust_patterns/observer_pattern_2/: Cargo.toml
sketchbook/scratch/: Cargo.toml  circles-exp.rs  circles-rand-rand-rand.rs  circles-rand-sqrt.rs  circles-rand.rs  image-basics.rs  image-pixel-ref.rs  pattern-matching.rs  point-inside-triangle.rs  scratch-touchosc.rs
sketchbook/sketches/: Cargo.toml
sketchbook/sketches/exp-forces/: particle-force.rs
sketchbook/sketches/learning/: bezier_curve_cubic.rs  slider.rs  vec2_add.rs  vec2_bounce_angle.rs  vec2_bounce_angle_bounds.rs
sketchbook/sketches/lineworks/: lw-001.rs
sketchbook/sketches/n-series/: 2021_01_01.rs  2021_01_02.rs  2021_01_03.rs  2021_01_04.rs  2021_01_05.rs  2021_01_06.rs  2021_01_07.rs  2021_01_08.rs  2021_01_09.rs  2021_01_10.2.rs  2021_01_10.rs  n-0012.rs  n-0013.rs  n-0014.rs  n-0015.rs  n-0016.rs  n-0017.rs  n-0018.rs  n-0019.rs  n-0020.rs  n-0021.rs  n-0022.rs  n-0023.rs  n-0024.rs  n-0025.rs  n-0026.rs  n-0027.rs  n-0028.rs  n-0029.rs  n-0030.rs  n-0031.rs  n-0032.rs  n-0033.rs  n-0035.rs  n-0036.rs  n-0039.rs  n-0041.rs  n-0045.rs  n-0046.rs  n-0047.rs  (+49 more)
sketchbook/sketches/rain-bow/: line.rs  particles.rs  rain-bow-1.rs  rain-bow-2.rs  rain-bow-3.rs  rain-bow-4.rs  rain-bow-5.rs  rain-bow-6.rs  rain-bow-7.rs
sketchbook/sketches/sandbox/: animate_line.rs  test-overlaps.rs  vec2_bounce_angle_2.rs  vec2_bounce_angle_bounds.rs
sketchbook/sketches/simple-rules/: sr-001.rs
sketchbook/src/: _loops.rs
sketchbook/src/bkup_sketches/: 2021_01_01.rs  2021_01_03.rs  2021_01_05.rs  2021_01_08.rs  2021_01_10.2.rs  2021_01_10.rs  Daily Sketches.code-workspace  lib_1.rs  n-0013.rs  n-0020.rs  n-0021.rs  n-0023.rs  n-0026.rs  n-0028.rs  n-0029.rs  n-0034.rs  n-0037.rs  n-0044.rs  n-0054.rs  n-0056.rs
sketchbook/src/lib/: mod.rs  vehicles.rs
sketchbook/src/templates/: Cargo.toml
sketchbook/templates/: 210922-basic-app.rs  211219-basic-app.rs  220612-basic-app.rs  Cargo.toml  basic_nannou_app.rs  basic_nannou_sketch_220625.rs  mm_nannou_app.rs
sketchbook/tutorials/schotter1/: Cargo.toml
sketchbook/tutorials/schotter1/src/: main.rs
sketches/: Cargo.toml  README.md
sketches/basic_shapes/: Cargo.toml
sketches/basic_shapes/src/: main.rs
sketches/examples/: basic_forces.rs  delicate_umbrella.rs
sketches/src/: 2021_01_04.rs  2021_01_08.rs  2021_01_09.rs  2021_01_10.2.rs  Daily Sketches.code-workspace  __notes.md  _howto.md  _loops.rs  _vehicle.rs  basic_forces.rs  draw_loop.rs  hello.rs  n-0013.rs  n-0014.rs  n-0015.rs  n-0016.rs  n-0017.rs  n-0018.rs  n-0019.rs  n-0021.rs  n-0022.rs  n-0027.rs  n-0032.rs  n-0033.rs  n-0034.rs  n-0036.rs  n-0037.rs  n-0038.rs  n-0039.rs  n-0040.rs  n-0042.rs  n-0043.rs  n-0045.rs  n-0046.rs  n-0047.rs  n-0050.rs  n-0051.rs  n-0052.rs  n-0053.rs  n-0057.rs
sketches/src/lib/: grid.rs  mod.rs  vehicles.rs
sketches/src/modules/: Point.rs  Vehicle.rs
sketches/src/templates/: start_50.rs
sketches2/: Cargo.toml
sketches3/examples/: aquatic_juice.rs  osc_receiver.rs
sketches_/hello-world/src/: main.rs
touchosc/: n-0090.tosc  n-0091.tosc  nannou_grid.tosc  sliders.tosc
