[package]
name = "sketches"
version = "0.1.0"
authors = ["mmansion <mikhail@transmission.studio>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14.1"

[dev-dependencies]
audrey = "0.2"
nannou_audio = "0.14.0"
nannou_laser = "0.14.3"
nannou_osc = "0.14.0"
shade_runner = "0.3"


# ------------------------------------------------
# [workspace]
# members = [
#     "modules",
# ]


# ------------------------------------------------
# daily sketches

[[example]]
name = "34"
path = "src/n-0034.rs"

[[example]]
name = "33"
path = "src/n-0033.rs"

[[example]]
name = "32"
path = "src/n-0032.rs"

[[example]]
name = "31"
path = "src/n-0031.rs"

[[example]]
name = "30"
path = "src/n-0030.rs"

[[example]]
name = "29"
path = "src/n-0029.rs"

[[example]]
name = "28"
path = "src/n-0028.rs"

[[example]]
name = "27"
path = "src/n-0027.rs"

[[example]]
name = "26"
path = "src/n-0026.rs"

[[example]]
name = "25"
path = "src/n-0025.rs"

[[example]]
name = "24"
path = "src/n-0024.rs"

[[example]]
name = "23"
path = "src/n-0023.rs"

[[example]]
name = "22"
path = "src/n-0022.rs"

[[example]]
name = "21"
path = "src/n-0021.rs"

[[example]]
name = "20"
path = "src/n-0020.rs"

[[example]]
name = "19"
path = "src/n-0019.rs"

[[example]]
name = "18"
path = "src/n-0018.rs"

[[example]]
name = "17"
path = "src/n-0017.rs"

[[example]]
name = "16"
path = "src/n-0016.rs"

[[example]]
name = "15"
path = "src/n-0015.rs"

[[example]]
name = "14"
path = "src/n-0014.rs"

[[example]]
name = "13"
path = "src/n-0013.rs"

[[example]]
name = "12"
path = "src/n-0012.rs"

[[example]]
name = "11"
path = "src/2021_01_10.2.rs"

[[example]]
name = "10"
path = "src/2021_01_10.rs"

[[example]]
name = "9"
path = "src/2021_01_09.rs"

[[example]]
name = "2021_01_08"
path = "src/2021_01_08.rs"

[[example]]
name = "2021_01_06"
path = "src/2021_01_06.rs"

[[example]]
name = "2021_01_05"
path = "src/2021_01_05.rs"

[[example]]
name = "2021_01_04"
path = "src/2021_01_04.rs"

[[example]]
name = "2021_01_03"
path = "src/2021_01_03.rs"

[[example]]
name = "2021_01_02"
path = "src/2021_01_02.rs"

[[example]]
name = "2021_01_01"
path = "src/2021_01_01.rs"

# ------------------------------------------------

[[example]]
name = "hello_world"
path = "src/hello_world.rs"

[[example]]
name = "basic_forces"
path = "src/basic_forces.rs"

[[example]]
name = "draw_loop"
path = "src/draw_loop.rs"