[package]
name = "library-dev"
version = "0.1.0"
authors = ["mmansion <mikhail@transmission.studio>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
nannou_osc = "0.18.0"
points_on_curve = "0.2"
winit = "0.27.5"
# nannou = { path = "../../nannou/nannou" }
# nannou = { version ="0.16.0", path = "../../test/nannou/nannou" }

# [patch.crates-io]
# nannou = { version ="0.16.0", path = "../../test/nannou" }

# mikhail's stuffs
library = { path = "../library" }
nannou_touchosc = { path = "../nannou_touchosc"}
#--------------------------------------------------------
# n-series / daily sketches

[[example]]
name = "lines-simple"
path = "lines-simple.rs"

[[example]]
name = "dev-background"
path = "dev-background.rs"

[[example]]
name = "dev-grid5"
path = "grid5/dev-grid5.rs"

[[example]]
name = "dev-grid4"
path = "grid4/dev-grid4.rs"