[package]
name = "n-series"
version = "0.1.0"
authors = ["mmansion <mikhail@transmission.studio>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
nannou_osc = "0.18.0"

# nannou = { path = "../../nannou/nannou" }
# nannou = { version ="0.16.0", path = "../../test/nannou/nannou" }

# [patch.crates-io]
# nannou = { version ="0.16.0", path = "../../test/nannou" }

# mikhail's stuffs
library = { path = "../library" }

#--------------------------------------------------------
# n-series / daily sketches

[[example]]
name = "n-0089"
path = "n-0089.rs"

[[example]]
name = "n-0088"
path = "n-0088.rs"

[[example]] # uses 4 faders with touchosc
name = "n-0087"
path = "n-0087.rs"

[[example]]
name = "n-0086"
path = "n-0086.rs"

[[example]]
name = "n-0085"
path = "n-0085.rs"

[[example]]
name = "n-0084"
path = "n-0084.rs"

[[example]]
name = "n-0083"
path = "n-0083.rs"



