[package]
name = "scratch"
version = "0.1.0"
authors = ["mmansion <mikhail@transmission.studio>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
nannou_osc = "0.18.0"

# nannou = { path = "../../nannou/nannou" }
# nannou = { version ="0.16.0", path = "../../test/nannou/nannou" }

# [patch.crates-io]
# nannou = { version ="0.16.0", path = "../../test/nannou" }

# mikhail's stuffs
library = { path = "../library" }
nannou_touchosc = { path = "../nannou_touchosc"}

#--------------------------------------------------------

[[example]]
name = "circles-exp"
path = "circles-exp.rs"

[[example]]
name = "circles-rand-rand-rand" #https://note.com/outburst/n/n631a3845186c
path = "circles-rand-rand-rand.rs"

[[example]]
name = "circles-rand-sqrt" #https://note.com/outburst/n/n631a3845186c
path = "circles-rand-sqrt.rs"

[[example]]
name = "circles-rand" #https://note.com/outburst/n/n631a3845186c
path = "circles-rand.rs"

[[example]]
name = "pattern-matching" #uses touchosc4, grid3
path = "pattern-matching.rs"

[[example]]
name = "scratch-touchosc" #uses touchosc4, grid3
path = "scratch-touchosc.rs"