[package]
name = "sketches"
version = "0.1.0"
authors = ["mmansion <mikhail@transmission.studio>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
nannou_osc = "0.18.0"


# nannou = { path = "../../nannou/nannou" }
# nannou = { version ="0.16.0", path = "../../test/nannou/nannou" }

# [patch.crates-io]
# nannou = { version ="0.16.0", path = "../../test/nannou" }

# mikhail's stuffs
library = { path = "../library" }
nannou_touchosc = { path = "../nannou_touchosc"}

#--------------------------------------------------------
# sandbox

[[example]]
name = "test-overlaps"
path = "sandbox/test-overlaps.rs"

[[example]]
# simple line animation
name = "animate_line"
path = "sandbox/animate_line.rs"

[[example]]
name = "vec2_add"
path = "sandbox/vec2_add.rs"

[[example]]
name = "vec2_bounce_angle"
path = "sandbox/vec2_bounce_angle.rs"

[[example]]
name = "vec2_bounce_angle_bounds"
path = "sandbox/vec2_bounce_angle_bounds.rs"

[[example]]
name = "slider"
path = "sandbox/slider.rs"

[[example]]
name = "bezier_curve_cubic"
path = "sandbox/bezier_curve_cubic.rs"

#--------------------------------------------------------
# lineworks

[[example]]
name = "lw-001"
path = "lineworks/lw-001.rs"

#--------------------------------------------------------
# rain-bow artwork development

[[example]]
name = "rain-bow-7"
path = "rain-bow/rain-bow-7.rs"

[[example]]
name = "rain-bow-6"
path = "rain-bow/rain-bow-6.rs"

[[example]]
name = "rain-bow-5"
path = "rain-bow/rain-bow-5.rs"

[[example]]
name = "rain-bow-4"
path = "rain-bow/rain-bow-4.rs"

[[example]]
name = "rain-bow-3"
path = "rain-bow/rain-bow-3.rs"

[[example]]
name = "rain-bow-2"
path = "rain-bow/rain-bow-2.rs"

[[example]]
name = "rain-bow-1"
path = "rain-bow/rain-bow-1.rs"

#--------------------------------------------------------
# exp-forces

[[example]]
name="particle-force"
path="exp-forces/particle-force.rs"

#--------------------------------------------------------
# n-series / daily sketches

[[example]]
name = "n-0113"
path = "n-series/n-0113.rs"

# dunno yet
[[example]]
name = "n-0112"
path = "n-series/n-0112.rs"

# revisions to scattered circle
[[example]]
name = "n-0111"
path = "n-series/n-0111.rs"

# overlapped circles
[[example]]
name = "n-0110"
path = "n-series/n-0110.rs"

# a nice hole
[[example]]
name = "n-0109"
path = "n-series/n-0109.rs"

# circle packing techniques
[[example]]
name = "n-0108"
path = "n-series/n-0108.rs"

[[example]]
name = "n-0107"
path = "n-series/n-0107.rs"

[[example]]
name = "n-0106"
path = "n-series/n-0106.rs"

[[example]]
name = "n-0105"
path = "n-series/n-0105.rs"

[[example]]
name = "n-0104"
path = "n-series/n-0104.rs"

[[example]]
name = "n-0103"
path = "n-series/n-0103.rs"

[[example]]
name = "n-0102"
path = "n-series/n-0102.rs"

[[example]]
name = "n-0101"
path = "n-series/n-0101.rs"

[[example]]
name = "n-0100"
path = "n-series/n-0100.rs"

[[example]]
name = "n-0099"
path = "n-series/n-0099.rs"

[[example]]
name = "n-0098"
path = "n-series/n-0098.rs"

[[example]]
name = "n-0097"
path = "n-series/n-0097.rs"

[[example]]
name = "n-0096"
path = "n-series/n-0096.rs"

[[example]]
#ref: https://gist.github.com/timClicks/c61c8e5c2f22625ef0ea917aa421f7a0
name = "n-0095" #circle packing
path = "n-series/n-0095.rs"

[[example]]
#ref: https://note.com/outburst/n/n631a3845186c
name = "n-0094" #recursive-random circle packing
path = "n-series/n-0094.rs"

[[example]]
#ref: https://note.com/outburst/n/n631a3845186c
name = "n-0093" #recursive-random circle packing
path = "n-series/n-0093.rs"

[[example]]
#ref: https://note.com/outburst/n/n631a3845186c
name = "n-0092" #recursive-random circle packing
path = "n-series/n-0092.rs"


[[example]]
name = "n-0091" #uses touchosc4, grid3
path = "n-series/n-0091.rs"

[[example]]
name = "n-0090" # uses lib: touchosc3, grid3
path = "n-series/n-0090.rs"

[[example]]
name = "n-0089"
path = "n-series/n-0089.rs"

[[example]]
name = "n-0088"
path = "n-series/n-0088.rs"

[[example]] # uses 4 faders with touchosc
name = "n-0087"
path = "n-series/n-0087.rs"

[[example]]
name = "n-0086"
path = "n-series/n-0086.rs"

[[example]]
name = "n-0085"
path = "n-series/n-0085.rs"

[[example]]
name = "n-0084"
path = "n-series/n-0084.rs"

[[example]]
name = "n-0083"
path = "n-seriesn-0083.rs"

[[example]]
name = "82"
path = "n-series/n-0082.rs"

[[example]]
name = "81"
path = "n-series/n-0081.rs"

[[example]]
name = "80"
path = "n-series/n-0080.rs"

[[example]]
name = "79"
path = "n-series/n-0079.rs"

[[example]]
name = "78"
path = "n-series/n-0078.rs"

[[example]]
name = "77"
path = "n-series/n-0077.rs"

[[example]]
name = "76"
path = "n-series/n-0076.rs"

[[example]]
name = "75"
path = "n-series/n-0075.rs"

[[example]]
name = "74"
path = "n-series/n-0074.rs"

[[example]]
name = "73"
path = "n-series/n-0073.rs"

[[example]]
name = "72"
path = "n-series/n-0072.rs"

[[example]]
name = "71"
path = "n-series/n-0071.rs"

[[example]]
name = "70"
path = "n-series/n-0070.rs"

[[example]]
name = "69"
path = "n-series/n-0069.rs"

[[example]]
name = "68"
path = "n-series/n-0068.rs"

[[example]]
name = "67"
path = "n-series/n-0067.rs"

[[example]]
name = "66"
path = "n-series/n-0066.rs"

[[example]]
name = "65"
path = "n-series/n-0065.rs"

[[example]]
name = "64"
path = "n-series/n-0064.rs"

[[example]]
name = "63"
path = "n-series/n-0063.rs"

[[example]]
name = "62"
path = "n-series/n-0062.rs"

[[example]]
name = "61"
path = "n-series/n-0061.rs"

[[example]]
name = "60"
path = "n-series/n-0060.rs"

#bezier form
[[example]] 
name = "59"
path = "n-series/n-0059.rs" 

#bezier form
[[example]] 
name = "58"
path = "n-series/n-0058.rs" 

[[example]]
name = "57"
path = "n-series/n-0057.rs"

[[example]]
name = "56"
path = "n-series/n-0056.rs"

[[example]]
name = "55"
path = "n-series/n-0055.rs"

[[example]]
name = "54"
path = "n-series/n-0054.rs"

[[example]]
name = "53"
path = "n-series/n-0053.rs"

[[example]]
name = "52"
path = "n-series/n-0052.rs"

[[example]]
name = "51"
path = "n-series/n-0051.rs"

[[example]]
name = "50"
path = "n-series/n-0050.rs"

[[example]]
name = "49"
path = "n-series/n-0049.rs"

[[example]]
name = "48"
path = "n-series/n-0048.rs"

[[example]]
name = "47"
path = "n-series/n-0047.rs"

[[example]]
name = "46"
path = "n-series/n-0046.rs"

[[example]]
name = "45"
path = "n-series/n-0045.rs"

[[example]]
name = "44"
path = "n-series/n-0044.rs"

[[example]]
name = "43"
path = "n-series/n-0043.rs"

[[example]]
name = "42"
path = "n-series/n-0042.rs"

[[example]]
name = "41"
path = "n-series/n-0041.rs"

[[example]]
name = "40"
path = "n-series/n-0040.rs"

[[example]]
name = "39"
path = "n-series/n-0039.rs"

[[example]]
name = "38"
path = "n-series/n-0038.rs"

[[example]]
name = "37"
path = "n-series/n-0037.rs"

[[example]]
name = "36"
path = "n-series/n-0036.rs"

[[example]]
name = "35"
path = "n-series/n-0035.rs"

[[example]]
name = "34"
path = "n-series/n-0034.rs"

[[example]]
name = "33"
path = "n-series/n-0033.rs"

[[example]]
name = "32"
path = "n-series/n-0032.rs"

[[example]]
name = "31"
path = "n-series/n-0031.rs"

[[example]]
name = "30"
path = "n-series/n-0030.rs"

[[example]]
name = "29"
path = "n-series/n-0029.rs"

[[example]]
name = "28"
path = "n-series/n-0028.rs"

[[example]]
name = "27"
path = "n-series/n-0027.rs"

[[example]]
name = "26"
path = "n-series/n-0026.rs"

[[example]]
name = "25"
path = "n-series/n-0025.rs"

[[example]]
name = "24"
path = "n-series/n-0024.rs"

[[example]]
name = "23"
path = "n-series/n-0023.rs"

[[example]]
name = "22"
path = "n-series/n-0022.rs"

[[example]]
name = "21"
path = "n-series/n-0021.rs"

[[example]]
name = "20"
path = "n-series/n-0020.rs"

[[example]]
name = "19"
path = "n-series/n-0019.rs"

[[example]]
name = "18"
path = "n-series/n-0018.rs"

[[example]]
name = "17"
path = "n-series/n-0017.rs"

[[example]]
name = "16"
path = "n-series/n-0016.rs"

[[example]]
name = "15"
path = "n-series/n-0015.rs"

[[example]]
name = "14"
path = "n-series/n-0014.rs"

[[example]]
name = "13"
path = "n-series/n-0013.rs"

[[example]]
name = "12"
path = "n-series/n-0012.rs"

[[example]]
name = "11"
path = "n-series/2021_01_10.2.rs"

[[example]]
name = "10"
path = "n-series/2021_01_10.rs"

[[example]]
name = "9"
path = "n-series/2021_01_09.rs"

[[example]]
name = "2021_01_08"
path = "n-series/2021_01_08.rs"

[[example]]
name = "2021_01_06"
path = "n-series/2021_01_06.rs"

[[example]]
name = "2021_01_05"
path = "n-series/2021_01_05.rs"

[[example]]
name = "2021_01_04"
path = "n-series/2021_01_04.rs"

[[example]]
name = "2021_01_03"
path = "n-series/2021_01_03.rs"

[[example]]
name = "2021_01_02"
path = "n-series/2021_01_02.rs"

[[example]]
name = "2021_01_01"
path = "n-series/2021_01_01.rs"

[[example]]
name = "hello_world"
path = "hello_world.rs"


#--------------------------------------------------------
# simple rules/

[[example]]
name = "sr-001"
path = "simple-rules/sr-001.rs"

