[package]
name = "templates"
version = "0.1.0"
authors = [
    "mmansion <mikhail@transmission.studio>",
]
description = "Starting templates for Nannou."
keywords = ["templates"]
license = "MIT"
repository = "https://github.com/mmansion/Exp_Nannou"
homepage = "https://github.com/mmansion/Exp_Nannou"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15.0"

# ------------------------------------------------
# daily sketches

[[example]]
name = "57"
path = "src/n-0057.rs"